[package]
name = "typeset"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
regex = "1"
markdown = "0.3"
rayon = "1.5"
nipper = "0.1.9"
html5ever = "0.26.0"
chrono = "0.4.19"